feat: add API docs query tool
